# OdomLaserCalibraTool

./: CMakeLists.txt  README.md  package.xml
include/: io.h  scan_match.h  solver.h  synchronizer.h  utils.h
include/csm/: algos.h  csm.h  csm_all.h  laser_data.h  laser_data_inline.h  laser_data_yogo.h  logging.h  math_utils.h  math_utils_gsl.h  restrict.h  sm_config.h  sm_options.h  utils.h
include/egsl/: egsl.h  egsl_imp.h  egsl_macros.h
include/gpc/: gpc.h  gpc_utils.h
include/gsl_eigen/: gsl_eigen.h
include/icp/: icp.h
include/options/: options.h
launch/: example.launch
src/: io.cpp  io_test.cpp  main.cpp  scan_match.cpp  solver.cpp  synchronizer.cpp  utils.cpp
src/csm/: clustering.cpp  laser_data.cpp  logging.cpp  math_utils.cpp  math_utils_gsl.cpp  orientation.cpp  sm_options.cpp  utils.cpp
src/egsl/: egsl.cpp  egsl_conversions.cpp  egsl_misc.cpp  egsl_ops.cpp
src/gpc/: gpc.cpp  gpc_utils.cpp
src/gsl_solver/: CMakeCache.txt  CMakeLists.txt  Makefile  analyzer.cpp  analyzer.h  aux_functions.cpp  aux_functions.h  calib_tuple.cpp  calib_tuple.h  cmake_install.cmake  gsl_jacobian.cpp  gsl_jacobian.h  gsl_jacobian_test.cpp  solver.cpp  solver2.cpp  solver2_meat.cpp  solver_options.cpp  solver_options.h  solver_utils.cpp  solver_utils.h  synchronizer.cpp  synchronizer_options.cpp  synchronizer_options.h  test_json.c  verifier.cpp  verifier_options.cpp  verifier_options.h  verifier_utils.cpp  verifier_utils.h
src/icp/: icp.cpp  icp_corr_dumb.cpp  icp_corr_tricks.cpp  icp_covariance.cpp  icp_debug.cpp  icp_loop.cpp  icp_outliers.cpp
src/options/: options.cpp  options_interface.cpp
src/testApp/: sm.cpp
